# connect-four

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  environment.yml
include/: ai.h  board.h  game.h  graphics.h  history.h  io.h  library.h
src/: CMakeLists.txt  ai.c  board.c  game.c  graphics.c  history.c  io.c  library.c  main.c
tests/: CMakeLists.txt  test_ai.c  test_board.c  test_game.c  test_library.cpp
